VariationHandling/JES_files/2016_preVFP/Histo_1000_TTToHadronic_boostedShiftedUp.err
[8MB/2.953GB][  0%][>                                                 ][4MB/s]  [40MB/2.953GB][  1%][>                                                 ][13.33MB/s]  [96MB/2.953GB][  3%][=>                                                ][24MB/s]  [160MB/2.953GB][  5%][==>                                               ][32MB/s]  [216MB/2.953GB][  7%][===>                                              ][36MB/s]  [272MB/2.953GB][  8%][====>                                             ][38.86MB/s]  [328MB/2.953GB][ 10%][=====>                                            ][41MB/s]  [384MB/2.953GB][ 12%][======>                                           ][42.67MB/s]  [440MB/2.953GB][ 14%][=======>                                          ][44MB/s]  [504MB/2.953GB][ 16%][========>                                         ][45.82MB/s]  [560MB/2.953GB][ 18%][=========>                                        ][46.67MB/s]  [616MB/2.953GB][ 20%][==========>                                       ][47.38MB/s]  [672MB/2.953GB][ 22%][===========>                                      ][48MB/s]  [736MB/2.953GB][ 24%][============>                                     ][49.07MB/s]  [792MB/2.953GB][ 26%][=============>                                    ][49.5MB/s]  [848MB/2.953GB][ 28%][==============>                                   ][49.88MB/s]  [904MB/2.953GB][ 29%][==============>                                   ][50.22MB/s]  [960MB/2.953GB][ 31%][===============>                                  ][50.53MB/s]  [1024MB/2.953GB][ 33%][================>                                 ][51.2MB/s]  [1.055GB/2.953GB][ 35%][=================>                                ][51.43MB/s]  [1.109GB/2.953GB][ 37%][==================>                               ][51.64MB/s]  [1.164GB/2.953GB][ 39%][===================>                              ][51.83MB/s]  [1.219GB/2.953GB][ 41%][====================>                             ][52MB/s]  [1.281GB/2.953GB][ 43%][=====================>                            ][52.48MB/s]  [1.336GB/2.953GB][ 45%][======================>                           ][52.62MB/s]  [1.391GB/2.953GB][ 47%][=======================>                          ][52.74MB/s]  [1.445GB/2.953GB][ 48%][========================>                         ][52.86MB/s]  [1.5GB/2.953GB][ 50%][=========================>                        ][52.97MB/s]  [1.555GB/2.953GB][ 52%][==========================>                       ][53.07MB/s]  [1.617GB/2.953GB][ 54%][===========================>                      ][53.42MB/s]  [1.672GB/2.953GB][ 56%][============================>                     ][53.5MB/s]  [1.727GB/2.953GB][ 58%][=============================>                    ][53.58MB/s]  [1.773GB/2.953GB][ 60%][==============================>                   ][53.41MB/s]  [1.82GB/2.953GB][ 61%][==============================>                   ][53.26MB/s]  [1.867GB/2.953GB][ 63%][===============================>                  ][53.11MB/s]  [1.922GB/2.953GB][ 65%][================================>                 ][53.19MB/s]  [1.977GB/2.953GB][ 66%][=================================>                ][53.26MB/s]  [2.023GB/2.953GB][ 68%][==================================>               ][53.13MB/s]  [2.047GB/2.953GB][ 69%][==================================>               ][52.4MB/s]  [2.078GB/2.953GB][ 70%][===================================>              ][51.9MB/s]  [2.109GB/2.953GB][ 71%][===================================>              ][51.43MB/s]  [2.141GB/2.953GB][ 72%][====================================>             ][50.98MB/s]  [2.172GB/2.953GB][ 73%][====================================>             ][50.55MB/s]  [2.211GB/2.953GB][ 74%][=====================================>            ][50.31MB/s]  [2.242GB/2.953GB][ 75%][=====================================>            ][49.91MB/s]  [2.273GB/2.953GB][ 76%][======================================>           ][49.53MB/s]  [2.312GB/2.953GB][ 78%][=======================================>          ][49.33MB/s]  [2.344GB/2.953GB][ 79%][=======================================>          ][48.98MB/s]  [2.383GB/2.953GB][ 80%][========================================>         ][48.8MB/s]  [2.414GB/2.953GB][ 81%][========================================>         ][48.47MB/s]  [2.445GB/2.953GB][ 82%][=========================================>        ][48.15MB/s]  [2.477GB/2.953GB][ 83%][=========================================>        ][47.85MB/s]  [2.5GB/2.953GB][ 84%][==========================================>       ][47.41MB/s]  [2.531GB/2.953GB][ 85%][==========================================>       ][47.13MB/s]  [2.562GB/2.953GB][ 86%][===========================================>      ][46.86MB/s]  [2.602GB/2.953GB][ 88%][============================================>     ][46.74MB/s]  [2.633GB/2.953GB][ 89%][============================================>     ][46.48MB/s]  [2.664GB/2.953GB][ 90%][=============================================>    ][46.24MB/s]  [2.703GB/2.953GB][ 91%][=============================================>    ][46.13MB/s]  [2.734GB/2.953GB][ 92%][==============================================>   ][45.9MB/s]  [2.773GB/2.953GB][ 93%][==============================================>   ][45.81MB/s]  [2.805GB/2.953GB][ 94%][===============================================>  ][45.59MB/s]  [2.844GB/2.953GB][ 96%][================================================> ][45.5MB/s]  [2.875GB/2.953GB][ 97%][================================================> ][45.29MB/s]  [2.914GB/2.953GB][ 98%][=================================================>][45.21MB/s]  [2.945GB/2.953GB][ 99%][=================================================>][45.01MB/s]  [2.953GB/2.953GB][100%][==================================================][45.13MB/s]  [2.953GB/2.953GB][100%][==================================================][45.13MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_18067/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_18067/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
